# COG_LOOP_24B0357_SOC

./: .gitignore  README.md  basic_call.py  basic_tool.py  browser_test.py  chat_agent.py  json_extractor.py  main.py  persona_call.py  pyproject.toml  rate_limit_handler.py  research_agent.py  youtube_autoplay.py
final project/: README.md  capstone.py  plan.json  tools.py
